# ChangeLog for dev-ruby/rubygems
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rubygems/ChangeLog,v 1.122 2009/06/07 17:40:29 armin76 Exp $

  07 Jun 2009; Raúl Porcel <armin76@gentoo.org> rubygems-1.3.3.ebuild:
  Add ~arm/~s390

  09 May 2009; Alex Legler <a3li@gentoo.org>
  -files/rubygems-0.9.1-no_post_install.patch,
  -files/rubygems-0.9.1-no_rdoc_install.patch, -rubygems-0.9.4-r2.ebuild,
  -files/rubygems-0.9.4-shebang-env-fix.patch, -rubygems-1.1.1.ebuild,
  -files/rubygems-1.1.1-setup.patch, -rubygems-1.2.0.ebuild,
  -files/rubygems-1.2.0-setup.patch, rubygems-1.3.1.ebuild,
  -rubygems-1.3.1-r30.ebuild, -files/no-manage_gems.patch,
  -files/no-system-rubygems.patch, -files/no_post_install.patch:
  Purging old versions and making repoman happy.

*rubygems-1.3.3 (09 May 2009)

  09 May 2009; Alex Legler <a3li@gentoo.org> +rubygems-1.3.3.ebuild,
  +files/rubygems-1.3.3-gentoo.patch, +files/rubygems-1.3.3-setup.patch:
  Version bump

*rubygems-1.3.1-r30 (20 Mar 2009)

  20 Mar 2009; Alex Legler <a3li@gentoo.org> +rubygems-1.3.1-r30.ebuild:
  Adding special version for Ruby 1.9.1 testing

  10 Jan 2009; Raúl Porcel <armin76@gentoo.org> rubygems-1.3.1.ebuild:
  alpha/ia64 stable wrt #253424

  08 Jan 2009; Jeroen Roovers <jer@gentoo.org> rubygems-1.3.1.ebuild:
  Stable for HPPA (bug #253424).

  07 Jan 2009; Ferris McCormick <fmccor@gentoo.org> rubygems-1.3.1.ebuild:
  Sparc stable, part of Bug #253425.

  07 Jan 2009; Brent Baude <ranger@gentoo.org> rubygems-1.3.1.ebuild:
  stable ppc64, bug 253424

  04 Jan 2009; Markus Meier <maekke@gentoo.org> rubygems-1.3.1.ebuild:
  amd64/x86 stable, bug #253424

  02 Jan 2009; Tobias Scherbaum <dertobi123@gentoo.org>
  rubygems-1.3.1.ebuild:
  ppc stable, bug #253424

  02 Dec 2008; Brent Baude <ranger@gentoo.org> rubygems-1.2.0.ebuild:
  Marking rubygems-1.2.0 ppc64 for bug 244952

  14 Nov 2008; Hans de Graaff <graaff@gentoo.org>