@@ -12,7 +12,9 @@ AUX rubygems-1.3.3-prefix.patch 254 RMD160 a851eeb26c54e87436fa977424239187e98ea
 AUX rubygems-1.3.3-setup.patch 886 RMD160 fa4610c20574a42f2703748359dd0bf50b83892e SHA1 54fcc6dc9dd4435a1d043fdf8f10e1d0756722fe SHA256 5220a63f1c8a231a0f8d7dfa938ef4351764a76aa82cf941fdd9dd6b83c7b6bf
 DIST rubygems-1.3.1.tgz 263748 RMD160 898f33bf49ac6d29d8980cb4feaf30ade0125248 SHA1 a21ae466146bffb28ece05cddbdced0b908ca74f SHA256 361f02e9e3bf1b6625f0e2146553b12c3003d36336cacba51410740f544a8d3b
 DIST rubygems-1.3.3.tgz 292766 RMD160 a9dffb8b93e1ef5cc0679a1555d0899859d770a3 SHA1 395de32c37518041f0bea242fa343f521b8dc100 SHA256 22744ae3994939a198707b9d573d19432c34960220afd2d196ed718bfebee6d7
+DIST rubygems-1.3.4.tgz 293275 RMD160 451797299921cac9997fc93a85601d6f28f17cf5 SHA1 b973b4748c0bc08f9a62b3312bde935dda2eac6f SHA256 1eb4b0a24ed589c40c2b2c3583bd39c52e841afedd55958cc191b3e31adfbbfc
 EBUILD rubygems-1.3.1.ebuild 2719 RMD160 50d6181873ae7a82586a71b9a225b4b1a52142b7 SHA1 a7a9c16d0d78a6f184d4cadf9c04819adc11f86b SHA256 1b6f7c0da8fe61e4432fc664968d55d957d3e46ded916daec8585ac997072b87
 EBUILD rubygems-1.3.3-r00.1.ebuild 3340 RMD160 cf74214cbb160acd0d56e3d47e7e8cf9c4dae4a1 SHA1 5d8d8fcad03f988d164d8e7aeccd237000c34791 SHA256 664525caa281879d461b66be1516d9f792c96d330686b06ca08028ae452c0edd
-MISC ChangeLog 18530 RMD160 acf16311248582a721e442de044a0fdbcd7e0bd6 SHA1 b412d12ca4eeb9322c6d6acd23193f2dc0746a2f SHA256 b1e91e4fb92131258d93eaa27d9ae68ee015da2c8a0fa9d9799e1bb3eb60779f
+EBUILD rubygems-1.3.4.ebuild 3344 RMD160 708ec995554708b63f6b5d64b8c89b1468ded7b9 SHA1 28135b6de317aef98aa376832d4759b462b1107e SHA256 9e9155c96040a2fa7dfe91038aa70897f7fc4768d97e43eed7c12c2a576d0ee2
+MISC ChangeLog 18644 RMD160 d13a8381d354cd00905c3afac1b608f10d16f754 SHA1 f17e49ff92797fdb2a54f09458c291856fcf812d SHA256 0cf26c2735b56f6f65ed908d5b057e5111cc46f43e10f3c34418920989c4b3a4
 MISC metadata.xml 247 RMD160 eb1d10b4366542ce2f232dcaf7317341b6b5608f SHA1 fcb6e2a1d6cda6d45640f9c5a5dfcc0fd4f3ab3b SHA256 633ae9912e8dd27f76b9cf53f5ad0d3222db85d9a19a76da7fd5e26f40b144e3
