@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/rubygems
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rubygems/ChangeLog,v 1.122 2009/06/07 17:40:29 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rubygems/ChangeLog,v 1.123 2009/07/05 18:27:15 a3li Exp $
+
+*rubygems-1.3.4 (05 Jul 2009)
+
+  05 Jul 2009; Alex Legler <a3li@gentoo.org> +rubygems-1.3.4.ebuild:
+  Version bump.
 
   07 Jun 2009; Raúl Porcel <armin76@gentoo.org> rubygems-1.3.3.ebuild:
   Add ~arm/~s390
